feat(compat): Provide JDK11 compatibilty through Multi-Release JAR (#200)